fixed spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,21 +58,16 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 400px;
 }
 
 .parallax-item:nth-child(4) {
-  height: 100vh;
   background: #000;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  /* Parallax Effect for DIV 3 */
-  min-height: 600px;
 }
 
 .parallax-item:nth-child(5) {
-  height: 400px;
   background: url('/leaves_neon_triangle_left_180.jpg');
   background-size: cover;
   background-position: center;
@@ -80,13 +75,13 @@ body {
 }
 
 .parallax-item:nth-child(6) {
-  height: 100vh;
+  /* height: 100vh; */
   background: #000;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   /* Parallax Effect for DIV 3 */
-  min-height: 600px;
+  /* min-height: 600px; */
 }
 
 .parallax-item:nth-child(7) {
